cmake_minimum_required(VERSION 3.10 FATAL_ERROR)

set(CMAKE_CXX_STANDARD 17 CACHE STRING "")
set(CMAKE_CXX_STANDARD_REQUIRED TRUE CACHE BOOL "")

set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")

function(aoc_day num)
    file(GLOB ACTUAL_SOURCES "day${num}/*.cpp")
    add_executable("day${num}" ${ACTUAL_SOURCES})
    target_link_libraries("day${num}" fmt gtest)
endfunction()

project("AoC2k20" VERSION 1.0 DESCRIPTION "Advent of Code 2020" LANGUAGES CXX C)

add_subdirectory(libs/fmt)
add_subdirectory(libs/gtest)

include_directories(common)
include_directories(libs/gtest/googletest/include)


aoc_day(1)
aoc_day(2)
aoc_day(3)
aoc_day(4)
aoc_day(5)
aoc_day(6)
aoc_day(7)
aoc_day(8)
aoc_day(9)
aoc_day(10)
aoc_day(11)
aoc_day(12)
aoc_day(13)
aoc_day(14)
aoc_day(15)
aoc_day(16)
aoc_day(17)
aoc_day(18)
aoc_day(19)
aoc_day(20)
aoc_day(21)
aoc_day(22)
aoc_day(23)
aoc_day(24)
aoc_day(25)
